Update logo and background colours

--- a/html/index.html
+++ b/html/index.html
@@ -232,7 +232,32 @@ projects on the Colouring London site.
 </article>
 
 <footer>
-    <a class="logo" href="index.html#top">Colouring London</a>
+    <a class="logo" href="index.html#top">
+        <div class="grid">
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+        </div>
+        <div class="logotype">
+            <span>Colouring</span>
+            <span>London</span>
+        </div>
+    </a>
 </footer>
 
 </body>
