Functional carousel, update bg colours

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1 class="logo" id="top">
+<a href="index.html" class="logo" id="top">
     <div class="grid">
         <div class="row">
             <div class="cell"></div>
@@ -30,11 +30,11 @@
             <div class="cell"></div>
         </div>
     </div>
-    <div class="logotype">
+    <h1 class="logotype">
         <span>Colouring</span>
         <span>London</span>
-    </div>
-</h1>
+    </h1>
+</a>
 
 <article>
 
@@ -62,7 +62,7 @@ will look like.
 <div class="carousel">
     <button class="carousel-control offscreen-text back">Back</button>
     <ul class="carousel-content">
-        <li class="active"><img src="images/slide-1-welcome.png" alt="Welcome"></li>
+        <li><img src="images/slide-1-welcome.png" alt="Welcome"></li>
         <li><img src="images/slide-2-categories.png" alt="Categories"></li>
         <li><img src="images/slide-3-edit.png" alt="Add/edit data"></li>
         <li><img src="images/slide-4-view.png" alt="View maps"></li>
@@ -158,6 +158,7 @@ research.
 
 <h2>Once built, our platform will allow you to:</h2>
 
+<section class="pale-pink">
 <h3>View maps</h3>
 
 <p>
@@ -168,7 +169,9 @@ interests you.
 </p>
 
 <img src="images/slide-4-view.png" alt="Preview of view maps page">
+</section>
 
+<section class="pale-yellow">
 <h3>Add and edit data</h3>
 
 <p>
@@ -178,7 +181,9 @@ Find a building and add or edit data for any of the 12 core categories.
 </p>
 
 <img src="images/slide-3-edit.png" alt="Preview of add/edit data page">
+</section>
 
+<section class="pale-orange">
 <h3>See how people are using our data</h3>
 
 <p>
@@ -190,7 +195,9 @@ history&mdash;or something we haven’t imagined yet.
 </p>
 
 <img src="images/slide-6-showcase.png" alt="Preview of data showcase page">
+</section>
 
+<section class="pale-green">
 <h3>Download, remix and reuse</h3>
 
 <p>
@@ -202,7 +209,7 @@ projects on the Colouring London site.
 </p>
 
 <img src="images/slide-5-download.png" alt="Preview of download page">
-
+</section>
 
 <form id="sign-up" action="https://tinyletter.com/colouringlondon" method="post" target="popupwindow"
     onsubmit="window.open('https://tinyletter.com/colouringlondon', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
@@ -260,5 +267,6 @@ projects on the Colouring London site.
     </a>
 </footer>
 
+<script src="main.js"></script>
 </body>
 </html>
