Section backgrounds and spacing

--- a/html/index.html
+++ b/html/index.html
@@ -37,8 +37,8 @@
 </a>
 
 <article>
-
-<h1>Can you help us capture information on every building in London?</h1>
+<div class="main-col">
+<h1 class="h2">Can you help us capture information on every building in London?</h1>
 
 <p>
 
@@ -75,7 +75,11 @@ will look like.
 
 
 <a class="btn btn-center" href="files/colouring-london-online-exhibition.pdf">View online exhibition</a>
+</div>
 
+<hr/>
+
+<div class="main-col">
 <p>
 
 Colouring London is being designed and built by the Centre for Advanced Spatial
@@ -93,8 +97,12 @@ will launch in 2019.
     <li><a href="https://www.ordnancesurvey.co.uk/"><img src="images/logo-os.png" alt="Ordnance Survey"></a></li>
     <li><a href="https://www.london.gov.uk/"><img src="images/logo-gla.png" alt="Supported by the Mayor of London"></a></li>
 </ul>
+</div>
 
-<h2>Data Categories</h2>
+<hr/>
+
+<div class="main-col">
+<h2 class="h1">Data Categories</h2>
 
 <p>
 
@@ -155,11 +163,17 @@ research.
         <p class="description">Do you like it?</p>
     </li>
 </ol>
+</div>
 
-<h2>Once built, our platform will allow you to:</h2>
+<hr/>
+
+<div class="main-col">
+<h2 class="h1">Once built, our platform will allow you to:</h2>
+</div>
 
 <section class="pale-pink">
-<h3>View maps</h3>
+<div class="main-col">
+<h3 class="h2">View maps</h3>
 
 <p>
 
@@ -168,11 +182,13 @@ interests you.
 
 </p>
 
-<img src="images/slide-4-view.png" alt="Preview of view maps page">
+<img class="border-image" src="images/slide-4-view.png" alt="Preview of view maps page">
+</div>
 </section>
 
 <section class="pale-yellow">
-<h3>Add and edit data</h3>
+<div class="main-col">
+<h3 class="h2">Add and edit data</h3>
 
 <p>
 
@@ -180,11 +196,13 @@ Find a building and add or edit data for any of the 12 core categories.
 
 </p>
 
-<img src="images/slide-3-edit.png" alt="Preview of add/edit data page">
+<img class="border-image" src="images/slide-3-edit.png" alt="Preview of add/edit data page">
+</div>
 </section>
 
 <section class="pale-orange">
-<h3>See how people are using our data</h3>
+<div class="main-col">
+<h3 class="h2">See how people are using our data</h3>
 
 <p>
 
@@ -194,11 +212,13 @@ history&mdash;or something we haven’t imagined yet.
 
 </p>
 
-<img src="images/slide-6-showcase.png" alt="Preview of data showcase page">
+<img class="border-image" src="images/slide-6-showcase.png" alt="Preview of data showcase page">
+</div>
 </section>
 
 <section class="pale-green">
-<h3>Download, remix and reuse</h3>
+<div class="main-col">
+<h3 class="h2">Download, remix and reuse</h3>
 
 <p>
 
@@ -208,12 +228,15 @@ projects on the Colouring London site.
 
 </p>
 
-<img src="images/slide-5-download.png" alt="Preview of download page">
+<img class="border-image" src="images/slide-5-download.png" alt="Preview of download page">
+</div>
 </section>
+
+<div class="main-col">
 
 <form id="sign-up" action="https://tinyletter.com/colouringlondon" method="post" target="popupwindow"
     onsubmit="window.open('https://tinyletter.com/colouringlondon', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-    <h3>Keep in touch</h3>
+    <h3 class="h1">Keep in touch</h3>
     <p>
 
     Receive occasional newsletters about the project as it develops. You can
@@ -232,14 +255,14 @@ projects on the Colouring London site.
     <input class="btn btn-full" type="submit" value="Sign up for updates" />
 </form>
 
-<a  class="btn btn-half" href="files/colouring-london-online-exhibition.pdf" target="_blank">View online exhibition</a>
-
-<a class="btn btn-half" href="faq.html">FAQ</a>
+<a  class="btn btn-half" href="files/colouring-london-online-exhibition.pdf" target="_blank">View online exhibition</a><!--
+--><a class="btn btn-half" href="faq.html">FAQ</a>
+</div>
 
 </article>
 
 <footer>
-    <a class="logo" href="index.html#top">
+    <a class="logo h2" href="index.html#top">
         <div class="grid">
             <div class="row">
                 <div class="cell"></div>
