Add project team

--- a/html/index.html
+++ b/html/index.html
@@ -97,6 +97,20 @@ will launch in 2019.
     <li><a href="https://www.ordnancesurvey.co.uk/"><img src="images/logo-os.png" alt="Ordnance Survey"></a></li>
     <li><a href="https://www.london.gov.uk/"><img src="images/logo-gla.png" alt="Supported by the Mayor of London"></a></li>
 </ul>
+
+<a href="supporters.html" class="btn">Supporting Organisations</a>
+
+<p>Project Team:</p>
+<p>
+
+Polly Hudson &ndash; Concept design and direction<br>
+Tom Russell &ndash; Platform design and development<br>
+Adam Dennett &ndash; Project supervision<br>
+Duncan Smith &ndash; Technical adviser<br>
+
+</p>
+
+
 </div>
 
 <hr/>
