Don't link to #top

--- a/html/faq.html
+++ b/html/faq.html
@@ -187,7 +187,7 @@ upload WGS84 coordinates.
 </article>
 
 <footer>
-        <a class="logo h2" href="index.html#top">
+        <a class="logo h2" href="index.html">
             <div class="grid">
                 <div class="row">
                     <div class="cell"></div>
