--- a/html/index.html
+++ b/html/index.html
@@ -276,7 +276,7 @@ projects on the Colouring London site.
 </article>
 
 <footer>
-    <a class="logo h2" href="index.html#top">
+    <a class="logo h2" href="index.html">
         <div class="grid">
             <div class="row">
                 <div class="cell"></div>
