Add cache-busting version to css, js

--- a/html/supporters.html
+++ b/html/supporters.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Supporting Organisations | Colouring London</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?v=5ed692a6">
 </head>
 <body>
 
@@ -51,6 +51,6 @@ about supporting the project as an organisation. -->
 
 </article>
 
-<script src="main.js"></script>
+<script src="main.js?v=1bbaabf2"></script>
 </body>
 </html>
