--- a/html/faq.html
+++ b/html/faq.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FAQ | Colouring London</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?v=5ed692a6">
 </head>
 <body>
 
@@ -215,6 +215,6 @@ upload WGS84 coordinates.
         </a>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="main.js?v=1bbaabf2"></script>
     </body>
     </html>
