--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colouring London</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?v=5ed692a6">
 </head>
 <body>
 
@@ -304,6 +304,6 @@ projects on the Colouring London site.
     </a>
 </footer>
 
-<script src="main.js"></script>
+<script src="main.js?v=1bbaabf2"></script>
 </body>
 </html>
