--- a/html/faq.html
+++ b/html/faq.html
@@ -46,10 +46,12 @@
 
 <dd>
 
-Initially we set out just to capture and release numerical data relating to age
-and land use relevant to energy and demolition related research within
-academia, but we soon realised that the opportunity existed to capture many
-more types of data for use in multiple applications.
+Initially we set out to collect and share numerical and categorical data
+relating to the age and land use of buildings for research into energy use and
+demolition, but we soon realised that the opportunity exists to capture many
+more types of data for use in all sorts of areas: from local history and
+heritage to building conservation, sustainable urban planning, architecture and
+the built environment.
 
 </dd>
 
@@ -57,43 +59,48 @@ more types of data for use in multiple applications.
 
 <dd>
 
-Anyone interested in London and its buildings, or in cities and in large-scale
-building attribute data sets
+Anyone interested in London and its buildings and anyone interested in cities
+and large-scale building attribute datasets.
 
 </dd>
 
-<dt class="h2">How is the data going to be used?</dt>
+<dt class="h2">How will the data be used?</dt>
 
 <dd>
 
-Our main job is to facilitate the collection, collation, visualisation and
-dissemination of the data. We are very excited to see how they are used. To
-help simulate discussion and ideas we are including a data showcase which will
-allow anyone to upload examples of how they are using Colouring London data, or
-how the same data categories are being used in other areas of the world.
+We have some ideas, but we also hope to be surprised! Our main task is to
+enable the collection, collation, visualisation and dissemination of the data.
+We are very excited to see how they are used. To help stimulate discussion and
+ideas we will include a data showcase which will allow anyone to share examples
+of how they use Colouring London data, and to provide examples of how similar
+datasets are being used elsewhere in the UK and around the world.
 
 </dd>
 
-<dt class="h2">Is there nowhere else you can access this type of information at building level?</dt>
+<dt class="h2">Is there anywhere else you can access this type of information at building level?</dt>
 
 <dd>
 
-Not for London as a whole. The Valuation Office Agency holds the most
-comprehensive records for tax purposes, but these are restricted at building
-level, even to academia.
+No, not for London as a whole. The Valuation Office Agency holds the most
+comprehensive records for tax purposes, but these are restricted at the building
+level, even for research within academia.
 
 </dd>
 
-<dt class="h2">Why aren’t you crowdsourcing text-based information on a building’s history?</dt>
+<dt class="h2">Why aren’t you crowdsourcing textual information on the history of buildings?</dt>
 
 <dd>
 
-Our remit is to collect numerical data for statistical analysis. However we
-will also include an area where a link can be added to take you to any web site
-page/pages where text based information on the building can be accessed. IHS’s
-‘Layers of London’ project http://alpha.layersoflondon.org/ and The Survey of
-London/CASA’s Whitechapel project https://surveyoflondon.org/map/. We are
-working closely with both HIS and The Survey.
+Our main focus is to collect data for modelling and statistical analysis, where
+numerical and categorical data tends to be most useful. However, we will
+collect links to other sites where text based information on a building can be
+created and shared. The <a href="http://alpha.layersoflondon.org/"
+target="_blank">Layers of London</a> project by the Institute for Historical
+Research and the <a href="https://surveyoflondon.org/map/"
+target="_blank">Histories of Whitechapel</a> project by the Survey of London
+and the Bartlett Centre for Advanced Spatial Analysis (CASA) both have an
+interest in text (and audio and photographs). We are working in close
+collaboration with both projects.
 
 </dd>
 
@@ -101,11 +108,12 @@ working closely with both HIS and The Survey.
 
 <dd>
 
-We asked many groups, ranging from academics and teachers to community groups
-and built environment professionals and found many overlaps. We have limited
-ourselves to 12 main categories to keep things simple, within which there are
-around thity sub categories. The prototype testing period will allow us to see
-whether there are any key categories missing.
+We have had conversations with many different groups, from academics and
+teachers to community groups and built environment professionals, and found
+many overlaps. We have limited ourselves to 12 main categories to keep things
+simple, within which there are around thirty sub-categories. The prototype
+testing period will allow us to see whether there are any key categories
+missing&mdash;feedback is welcome.
 
 </dd>
 
@@ -113,20 +121,23 @@ whether there are any key categories missing.
 
 <dd>
 
-Quantitative data on the building stock probably/hopefully not that
-controversial other than for large developments. Utilities&rsquo; location may be
-sensitive. We think unlikely to occur other than perhaps where issues surround
-a particular development. Here the system allows both developers and
-communities to upload and edit as they like and battle it out. For &lsquo;Like me&rsquo;,
-users have to login and have only one vote per building.
+Our intention is to cultivate a community which can handle occasional
+disruption, along the lines of other collaborative online projects. The site
+will allow anyone to upload and edit data as they like and to go back and forth
+over the details if necessary. Quantitative data on the building stock is, we
+hope, not too controversial, other than perhaps for large developments. The
+locations of utilities&rsquo; may be sensitive, but this is not within the main
+scope of our data collection. For the &lsquo;Like me&rsquo; category, users
+will have only one vote per building.
 
 
-<dt class="h2">How do you deal with people who keep entering &lsquo;wrong&rsquo; information.</dt>
+<dt class="h2">How do you deal with people who enter &lsquo;wrong&rsquo; information.</dt>
 
 <dd>
 
-Like Wikipedia you will have to keep re-editing, however edit histories will
-help users see where data comes from ie if it is uploaded by a specialist body.
+Like Wikipedia, we as a community will have to keep re-editing, however edit
+histories will help users see where data comes from, for example if it is
+uploaded by a specialist body.
 
 </dd>
 
@@ -134,9 +145,10 @@ help users see where data comes from ie if it is uploaded by a specialist body.
 
 <dd>
 
-We recognise importance of this but we are only, in the first instance
-gathering data on buildings, themselves. We do however include information
-building position ie mid terrace, end of terrace, semi-detached and detached
+We recognise the importance of this but in the first instance we will only
+gather data on the buildings themselves. We will however include a sub-category
+which records a building's position, i.e. mid-terrace, end-of-terrace,
+semi-detached or detached.
 
 </dd>
 
@@ -144,12 +156,19 @@ building position ie mid terrace, end of terrace, semi-detached and detached
 
 <dd>
 
-We can record multiple uses but are reliant on OSMM polygons so if not
-subdivided (as for UCL building) we have to either do this manually or group
-all uses under a single polygons. Our hope is that the project will stimulate
-discussion with OS regarding a more user friendly open version of the building
-footprints. Post war estates for examples have separate polygons for balconies
-etc which is not ideal.
+We intend to record as many uses per building as necessary.
+
+</dd>
+
+<dt class="h2">What if several buildings are represented as a single outline?</dt>
+
+We rely on Ordnance Survey MasterMap for our building outlines, so if these are
+not subdivided, we will need to attach extra data to the single outline, or
+else consider altering the outlines manually. Some buildings have the opposite
+problem, where there are multiple polygons for a single building. For example
+some post-war estates have each of the balconies drawn separately. Our hope is
+that the project will stimulate discussion with Ordnance Survey regarding a
+more user friendly open version of the building outlines.
 
 </dd>
 
@@ -157,30 +176,48 @@ etc which is not ideal.
 
 <dd>
 
-Yes if OS permits use of polygons. Colouring London will act as a proof of
-concept.
+Yes, in principal. We hope that Colouring London will act as a proof of
+concept. We rely on a sufficient set of building outlines to provide the basis
+for all the building attribute data that we collect&mdash;for London, Ordnance
+Survey and the Greater London Authority have supported us by providing
+the MasterMap building outlines.
 
 </dd>
 
-<dt class="h2">Have you involved Open Street Map in the project?</dt>
+<dt class="h2">Have you involved OpenStreetMap in the project?</dt>
 
 <dd>
 
-We had a discussion with OSM at an international mapping conference in Leuven
-last year and would very much like the OSM community to become involved
-project. We hope that by generating data of relevance to local areas we will
-also stimulate an increase interest in OSM and in building polygon generation.
+Yes, we had a discussion with OpenStreetMap contributors at an international
+mapping conference in Leuven last year and would very much like the
+OpenStreetMap community to become involved in the project. We hope that by
+generating data of relevance to local areas we will also stimulate increased
+interest in OpenStreetMap and in collecting building outline polygons as open
+data.
 
 </dd>
 
-<dt class="h2">How can communities download spatial information if no coordinates are given?  </dt>
+<dt class="h2">Will all the data collected be released as open data?</dt>
 
 <dd>
 
-This is the main reason why address detail collection is so important, is so
-that we can offer some spatial reference within the open tables. We will also
-be asking the OSM community if, as suggested by a contributor, it can help
-upload WGS84 coordinates.
+Yes, all the building attributes which we collect will be available under an
+open data license. However, we are limited by Ordnance Survey data licensing
+and are not currently able to provide building outlines or geographical
+coordinates. We will provide sufficient data for MasterMap users to link
+building attributes to their own copies of the polygons.
+
+</dd>
+
+<dt class="h2">How can communities download the data with sufficient spatial information?</dt>
+
+<dd>
+
+We will collect details of building addresses, including postcodes, as a first
+step towards providing location details. We will also look into the
+possibility of creating and sharing geographical coordinates for our
+dataset as open data, as suggested by a contributor, in collaboration with the
+OpenStreetMap community.
 
 </dd>
 </dl>
