--- a/html/faq.html
+++ b/html/faq.html
@@ -47,8 +47,8 @@
 <dd>
 
 Initially we set out to collect and share numerical and categorical data
-relating to the age and land use of buildings for research into energy use and
-demolition, but we soon realised that the opportunity exists to capture many
+relating to the age and land use of buildings for research into the built environment and
+demolition, but we soon realised that the opportunity existed to capture many
 more types of data for use in all sorts of areas: from local history and
 heritage to building conservation, sustainable urban planning, architecture and
 the built environment.
@@ -161,6 +161,8 @@ We intend to record as many uses per building as necessary.
 </dd>
 
 <dt class="h2">What if several buildings are represented as a single outline?</dt>
+
+<dd>
 
 We rely on Ordnance Survey MasterMap for our building outlines, so if these are
 not subdivided, we will need to attach extra data to the single outline, or
