Update supporting organisations

--- a/html/supporters.html
+++ b/html/supporters.html
@@ -38,14 +38,33 @@
 
 <article class="main-col">
 
-<h1 class="h1">Supporting Organisations</h1>
+<h1 class="h1">Organisations</h1>
 
-<p>Work in progress&hellip;</p>
+<h2 class="h2">Lead organisation</h2>
+
+<p>Bartlett Centre for Advanced Spatial Analysis, University College London (UCL)</p>
+
+<h2 class="h2">Core Partners</h2>
+
+<p>Ordnance Survey</p>
+<p>Historic England</p>
+<p>Greater London Authority</p>
+
+<h2 class="h2">Supporting organisations</h2>
+
+<p>Institute of Historical Research, Layers of London</p>
+<p>Royal Borough of Kensington and Chelsea</p>
+<p>UCL Institute for Environmental Design and Engineering</p>
+<p>UCL Survey of London</p>
+<p>UCL Energy Institute</p>
 
 <p>
 
-<!-- Please do <a href="mailto:polly@colouring.london">contact us</a> to enquire
-about supporting the project as an organisation. -->
+    We are very grateful to our supporting organisations for kindly
+    disseminating the Colouring London link to their memberships, offering bulk
+    uploads of data, and/or providing specialist advice. If you would like to
+    be included on our list please contact Polly Hudson at
+    <a href="mailto:p.a.hudson@ucl.ac.uk">p.a.hudson@ucl.ac.uk</a>.
 
 </p>
 
