Move project team to "People and Organisations" page

--- a/html/index.html
+++ b/html/index.html
@@ -98,18 +98,7 @@ will launch in 2019.
     <li><a href="https://www.london.gov.uk/"><img src="images/logo-gla.png" alt="Supported by the Mayor of London"></a></li>
 </ul>
 
-<a href="supporters.html" class="btn">Supporting Organisations</a>
-
-<p>Project Team:</p>
-<p>
-
-Polly Hudson &ndash; Concept design and direction<br>
-Tom Russell &ndash; Platform design and development<br>
-Adam Dennett &ndash; Project supervision<br>
-Duncan Smith &ndash; Technical adviser<br>
-
-</p>
-
+<a href="supporters.html" class="btn">People and Supporting Organisations</a>
 
 </div>
 
