--- a/html/supporters.html
+++ b/html/supporters.html
@@ -38,7 +38,7 @@
 
 <article class="main-col">
 
-<h1 class="h1">Organisations</h1>
+<h1 class="h1">People and organisations</h1>
 
 <h2 class="h2">Lead organisation</h2>
 
@@ -58,6 +58,13 @@
 <p>UCL Survey of London</p>
 <p>UCL Energy Institute</p>
 
+<h2 class="h2">Project Team</h2>
+
+<p>Polly Hudson &ndash; Concept design and direction</p>
+<p>Tom Russell &ndash; Platform design and development</p>
+<p>Adam Dennett &ndash; Project supervision</p>
+<p>Duncan Smith &ndash; Technical adviser</p>
+
 <p>
 
     We are very grateful to our supporting organisations for kindly
@@ -69,6 +76,35 @@
 </p>
 
 </article>
+
+<footer>
+    <a class="logo h2" href="index.html">
+        <div class="grid">
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="row">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+        </div>
+        <div class="logotype">
+            <span>Colouring</span>
+            <span>London</span>
+        </div>
+    </a>
+</footer>
 
 <script src="main.js?v=1bbaabf2"></script>
 </body>
