--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -60,10 +60,11 @@
       <h2>View Maps</h2>
       <ul class="maps-list">
           <li>Year Built</li>
-          <li>Size</li>
-          <li>Like Me!</li>
       </ul>
-      <a href="building-view.html">(Mock) View building detail</a>
+      <h3>Building</h3>
+      <pre id="building-detail">
+Click a building to see data.
+      </pre>
   </div>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
