--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -59,7 +59,8 @@
   <div id="legend">
       <h2>View Maps</h2>
       <ul class="maps-list">
-          <li>Year Built</li>
+          <li data-map="date_year">Year Built</li>
+          <li data-map="size_storeys">Number of storeys</li>
       </ul>
       <h3>Building</h3>
       <pre id="building-detail">
