--- a/frontend/building-edit.html
+++ b/frontend/building-edit.html
@@ -21,30 +21,30 @@
 <header class="main-header">
   <nav class="navbar navbar-light navbar-expand">
     <a href="index.html" class="logo navbar-brand" id="top">
-        <div class="grid">
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
+      <div class="grid">
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
         </div>
-        <h1 class="logotype">
-            <span>Colouring</span>
-            <span>London</span>
-        </h1>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+      </div>
+      <h1 class="logotype">
+        <span>Colouring</span>
+        <span>London</span>
+      </h1>
     </a>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active"><a href="maps.html" class="nav-link">View Maps</a></li>
@@ -57,31 +57,71 @@
 <main class="beta">
   <div id="map"></div>
   <div id="legend">
-    <h2 class="h2">Edit Building</h2>
+    <h2 class="h2">Edit building data</h2>
     <form action="building-view.html" method="GET">
-        <h3 class="h3">Age</h3>
-        <label for="">Year built</label>
-        <input type="text" value="2018">
-        <label for="">Source</label>
-        <input type="text">
-        <label for="">Facade date</label>
-        <input type="text" value="2018">
-
-        <h3 class="h3">Size</h3>
-        <label for="">Number of storeys</label>
-        <input type="text" value="3">
-
-        <h3 class="h3">Like Me!</h3>
-        <label for="">Like this building?</label>
-        <input type="checkbox" checked>
-
-        <input type="submit" value="Save" class="btn">
+      <fieldset class="data-section">
+        <legend class="h3 bullet-prefix location">Location</legend>
+        <div class="data-list">
+          <label for="">Building name</label>
+          <input class="form-control" type="text" value="">
+          <label for="">Building number</label>
+          <input class="form-control" type="text" value="">
+          <label for="">Street</label>
+          <input class="form-control" type="text" value="">
+          <label for="">Address line 2</label>
+          <input class="form-control" type="text" value="">
+          <label for="">Town</label>
+          <input class="form-control" type="text" value="">
+          <label for="">Postcode</label>
+          <input class="form-control" type="text" value="">
+        </div>
+      </fieldset>
+      <fieldset class="data-section">
+        <legend class="h3 bullet-prefix age">Age</legend>
+        <div class="data-list">
+          <label for="">Year built (best estimate)</label>
+          <input class="form-control" type="number" step="1" value="2018">
+          <label for="">Year built (upper estimate)</label>
+          <input class="form-control" type="number" step="1" value="2018">
+          <label for="">Year built (lower estimate)</label>
+          <input class="form-control" type="number" step="1" value="2018">
+          <label for="">Facade date</label>
+          <input class="form-control" type="number" step="1" value="">
+          <label for="">Source</label>
+          <input class="form-control" type="text">
+        </div>
+      </fieldset>
+      <fieldset class="data-section">
+        <legend class="h3 bullet-prefix size">Size</legend>
+        <div class="data-list">
+          <label for="">Attic storeys</label>
+          <input class="form-control" type="number" step="1" value="0">
+          <label for="">Core storeys</label>
+          <input class="form-control" type="number" step="1" value="3">
+          <label for="">Basement storeys</label>
+          <input class="form-control" type="number" step="1" value="1">
+        </div>
+      </fieldset>
+      <fieldset class="data-section">
+        <legend class="h3 bullet-prefix like">Like Me!</legend>
+        <div class="data-list">
+          <label for="">Like this building?</label>
+          <div class="form-check">
+            <input class="form-check-input position-static" type="checkbox" checked>
+          </div>
+        </div>
+      </fieldset>
+      <div class="buttons-container">
+        <a href="/building-view.html" class="btn btn-secondary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Save</button>
+      </div>
     </form>
   </div>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-  integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-  crossorigin=""></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+</main>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+crossorigin=""></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 </body>
 </html>
