--- a/frontend/building-view.html
+++ b/frontend/building-view.html
@@ -21,30 +21,30 @@
 <header class="main-header">
   <nav class="navbar navbar-light navbar-expand">
     <a href="index.html" class="logo navbar-brand" id="top">
-        <div class="grid">
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
+      <div class="grid">
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
         </div>
-        <h1 class="logotype">
-            <span>Colouring</span>
-            <span>London</span>
-        </h1>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+      </div>
+      <h1 class="logotype">
+        <span>Colouring</span>
+        <span>London</span>
+      </h1>
     </a>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active"><a href="maps.html" class="nav-link">View Maps</a></li>
@@ -57,26 +57,67 @@
 <main class="beta">
   <div id="map"></div>
   <div id="legend">
-      <h2 class="h2">View Building</h2>
-
-      <h3 class="h3">Age</h3>
-      <p>Year built: 2018</p>
-      <p>Source:</p>
-      <p>Facade date: 2018</p>
-
-      <h3 class="h3">Size</h3>
-      <p>Number of storeys: 3</p>
-
-      <h3 class="h3">Like Me!</h3>
-      <p>Likes: 25</p>
-
-      <a href="building-edit.html" class="btn">Edit</a>
-      <a href="maps.html">&lt; Back to maps</a>
+    <h2 class="h2">Building data</h2>
+    <section class="data-section">
+      <h3 class="h3 bullet-prefix location">Location</h3>
+      <dl class="data-list">
+        <dt>Building Name</dt>
+        <dd><span class="no-data">no data</span></dd>
+        <dt>Building Number</dt>
+        <dd><span class="no-data">no data</span></dd>
+        <dt>Street</dt>
+        <dd><span class="no-data">no data</span></dd>
+        <dt>Address line 2</dt>
+        <dd><span class="no-data">no data</span></dd>
+        <dt>Town</dt>
+        <dd><span class="no-data">no data</span></dd>
+        <dt>Postcode</dt>
+        <dd><span class="no-data">no data</span></dd>
+      </dl>
+    </section>
+    <section class="data-section">
+      <h3 class="h3 bullet-prefix age">Age</h3>
+      <dl class="data-list">
+        <dt>Year built (best estimate)</dt>
+        <dd>2018</dd>
+        <dt>Year built (lower estimate)</dt>
+        <dd>2018</dd>
+        <dt>Year built (upper estimate)</dt>
+        <dd>2018</dd>
+        <dt>Date Source</dt>
+        <dd>Pevsner</dd>
+        <dt>Facade date</dt>
+        <dd>2018</dd>
+      </dl>
+    </section>
+    <section class="data-section">
+      <h3 class="h3 bullet-prefix size">Size</h3>
+      <dl class="data-list">
+        <dt>Attic storeys</dt>
+        <dd>0</dd>
+        <dt>Core storeys</dt>
+        <dd>3</dd>
+        <dt>Basement storeys</dt>
+        <dd>1</dd>
+      </dl>
+    </section>
+    <section class="data-section">
+      <h3 class="h3 bullet-prefix like">Like Me!</h3>
+      <dl class="data-list">
+        <dt>Likes</dt>
+        <dd> 25</dd>
+      </dl>
+    </section>
+    <div class="buttons-container">
+      <a href="maps.html" class="btn btn-secondary">Back to maps</a>
+      <a href="building-edit.html" class="btn btn-primary">Edit data</a>
+    </div>
   </div>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-  integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-  crossorigin=""></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+</main>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+crossorigin=""></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 </body>
 </html>
