--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -21,30 +21,30 @@
 <header class="main-header">
   <nav class="navbar navbar-light navbar-expand">
     <a href="index.html" class="logo navbar-brand" id="top">
-        <div class="grid">
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
+      <div class="grid">
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
         </div>
-        <h1 class="logotype">
-            <span>Colouring</span>
-            <span>London</span>
-        </h1>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+        <div class="row">
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
+      </div>
+      <h1 class="logotype">
+        <span>Colouring</span>
+        <span>London</span>
+      </h1>
     </a>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active"><a href="maps.html" class="nav-link">View Maps</a></li>
@@ -57,15 +57,15 @@
 <main class="beta">
   <div id="map"></div>
   <div id="legend">
-      <h2>View Maps</h2>
-      <ul class="maps-list">
-          <li data-map="date_year">Year Built</li>
-          <li data-map="size_storeys">Number of storeys</li>
-      </ul>
-      <h3>Building</h3>
-      <pre id="building-detail">
+    <h2>View Maps</h2>
+    <ul class="maps-list">
+      <li class="bullet-prefix age" data-map="date_year">Year Built</li>
+      <li class="bullet-prefix size" data-map="size_storeys">Number of storeys</li>
+    </ul>
+    <h3>Building</h3>
+    <pre id="building-detail">
 Click a building to see data.
-      </pre>
+    </pre>
   </div>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
