--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,12 @@
 <body>
 <p class="beta-banner" role="alert" >
 
-  Hello! Welcome to the prototype (beta) site for Colouring London. <a
+  Welcome to the prototype (beta) site for Colouring London. <a
   href="http://colouringlondon.org">Find out more about the project.</a>
 
 </p>
 <header class="main-header">
-  <nav class="navbar navbar-light navbar-expand">
+  <nav class="navbar navbar-light navbar-expand-md">
     <a href="index.html" class="logo navbar-brand" id="top">
         <div class="grid">
             <div class="row">
@@ -57,9 +57,9 @@
 <main class="beta">
   <div id="map"></div>
   <div class="jumbotron welcome-float">
-    <h1>Welcome to Colouring London</h1>
+    <h1 class="h1">Welcome to Colouring London</h1>
     <p class="lead">Colour in, view and download data on London's buildings</p>
-    <a href="maps.html" class="btn btn-lg">Get Started</a>
+    <a href="maps.html" class="btn btn-outline-dark btn-lg btn-block">Get Started</a>
   </div>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
