--- a/frontend/404.html
+++ b/frontend/404.html
@@ -12,12 +12,12 @@
 
 <p class="beta-banner" role="alert" >
 
-  Hello! Welcome to the prototype (beta) site for Colouring London. <a
+  Welcome to the prototype (beta) site for Colouring London. <a
   href="http://colouringlondon.org">Find out more.</a>
 
 </p>
 <header class="main-header">
-  <nav class="navbar navbar-light navbar-expand">
+  <nav class="navbar navbar-light navbar-expand-md">
     <a href="index.html" class="logo navbar-brand" id="top">
         <div class="grid">
             <div class="row">
@@ -64,7 +64,7 @@
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
 integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 crossorigin=""></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
+
 <script src="main.js"></script>
 </body>
 </html>
