--- a/frontend/about.html
+++ b/frontend/about.html
@@ -12,37 +12,37 @@
 
 <p class="beta-banner" role="alert" >
 
-  Hello! Welcome to the prototype (beta) site for Colouring London. <a
+  Welcome to the prototype (beta) site for Colouring London. <a
   href="http://colouringlondon.org">Find out more.</a>
 
 </p>
 <header class="main-header">
-  <nav class="navbar navbar-light navbar-expand">
+  <nav class="navbar navbar-light navbar-expand-md">
     <a href="index.html" class="logo navbar-brand" id="top">
-        <div class="grid">
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-        </div>
-        <h1 class="logotype">
-            <span>Colouring</span>
-            <span>London</span>
-        </h1>
+    <div class="grid">
+      <div class="row">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      <div class="row">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      <div class="row">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+    </div>
+    <h1 class="logotype">
+      <span>Colouring</span>
+      <span>London</span>
+    </h1>
     </a>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><a href="maps.html" class="nav-link">View Maps</a></li>
@@ -74,7 +74,7 @@ will look like.
 
 </p>
 
-<a class="btn btn-center" href="#sign-up">Sign up for updates</a>
+<a class="btn btn-center btn-outline-dark btn-lg" href="#sign-up">Sign up for updates</a>
 
 <div class="carousel">
     <button class="carousel-control offscreen-text back">Back</button>
@@ -285,7 +285,7 @@ projects on the Colouring London site.
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
 integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 crossorigin=""></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" integrity="sha256-ROS+XfN+WVpU3giGt7Fwy92u3h4at1gN7Z5xQ2Ke1lw=" crossorigin="anonymous"></script>
+
 <script src="main.js"></script>
 </body>
 </html>
