Fix up about page

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -74,7 +74,9 @@ will look like.
 
 </p>
 
-<a class="btn btn-center btn-outline-dark btn-lg" href="#sign-up">Sign up for updates</a>
+<div class="buttons-container btn-center">
+  <a class="btn btn-outline-dark btn-lg" href="#sign-up">Sign up for updates</a>
+</div>
 
 <div class="carousel">
     <button class="carousel-control offscreen-text back">Back</button>
@@ -91,7 +93,9 @@ will look like.
 </div>
 
 
-<a class="btn btn-center" href="files/colouring-london-online-exhibition.pdf">View online exhibition</a>
+<div class="buttons-container btn-center">
+  <a class="btn btn-outline-dark btn-lg" href="files/colouring-london-online-exhibition.pdf">View online exhibition</a>
+</div>
 </div>
 
 <hr/>
@@ -114,8 +118,6 @@ will launch in 2019.
     <li><a href="https://www.ordnancesurvey.co.uk/"><img src="images/logo-os.png" alt="Ordnance Survey"></a></li>
     <li><a href="https://www.london.gov.uk/"><img src="images/logo-gla.png" alt="Supported by the Mayor of London"></a></li>
 </ul>
-
-<a href="supporters.html" class="btn">People and Supporting Organisations</a>
 
 </div>
 
@@ -272,11 +274,16 @@ projects on the Colouring London site.
         <a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a>.
         We'll never share your email address.
     </small>
-    <input class="btn btn-full" type="submit" value="Sign up for updates" />
+    <div class="buttons-container">
+      <input class="btn btn-outline-dark btn-block" type="submit" value="Sign up for updates" />
+    </div>
 </form>
 
-<a  class="btn btn-half" href="files/colouring-london-online-exhibition.pdf" target="_blank">View online exhibition</a><!--
---><a class="btn btn-half" href="faq.html">FAQ</a>
+<div class="buttons-container">
+<a  class="btn btn-outline-dark btn-half" href="files/colouring-london-online-exhibition.pdf" target="_blank">View online exhibition</a><!--
+--><a class="btn btn-outline-dark btn-half" href="faq.html">FAQ</a>
+</div>
+
 </div>
 
 </article>
