--- a/frontend/building-edit.html
+++ b/frontend/building-edit.html
@@ -56,7 +56,7 @@
 </header>
 <main class="beta">
   <div id="map"></div>
-  <div id="legend">
+  <div id="legend" class="info-container">
     <h2 class="h2">Edit building data</h2>
     <form action="building-view.html" method="GET">
       <fieldset class="data-section">
