--- a/frontend/building-view.html
+++ b/frontend/building-view.html
@@ -56,7 +56,7 @@
 </header>
 <main class="beta">
   <div id="map"></div>
-  <div id="legend">
+  <div id="legend" class="info-container">
     <h2 class="h2">Building data</h2>
     <section class="data-section">
       <h3 class="h3 bullet-prefix location">Location</h3>
