--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,10 +61,23 @@
     <p class="lead">Colour in, view and download data on London's buildings</p>
     <a href="maps.html" class="btn btn-outline-dark btn-lg btn-block">Get Started</a>
   </div>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-  integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-  crossorigin=""></script>
 
-  <script src="main.js"></script>
+  <div id="legend" class="info-container offscreen">
+      <h2 class="h2">Maps</h2>
+      <ul class="maps-list">
+        <li class="bullet-prefix age" data-map="date_year">Year Built</li>
+        <li class="bullet-prefix size" data-map="size_storeys">Number of storeys</li>
+      </ul>
+      <h3 class="h3">Building</h3>
+      <pre id="building-detail">
+Click a building to see data.
+      </pre>
+  </div>
+</main>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+crossorigin=""></script>
+
+<script src="main.js"></script>
 </body>
 </html>
