--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -56,7 +56,7 @@
 </header>
 <main class="beta">
   <div id="map"></div>
-  <div id="legend">
+  <div id="legend" class="info-container">
     <h2 class="h2">Maps</h2>
     <ul class="maps-list">
       <li class="bullet-prefix age" data-map="date_year">Year Built</li>
@@ -67,10 +67,11 @@
 Click a building to see data.
     </pre>
   </div>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-  integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-  crossorigin=""></script>
+</main>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+crossorigin=""></script>
 
-  <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
