--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
   crossorigin=""/>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css?ver=6ab287acb">
 </head>
 <body>
 <p class="beta-banner" role="alert" >
@@ -201,6 +201,6 @@ Click a building to see data.
 integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 crossorigin=""></script>
 
-<script src="main.js"></script>
+<script src="main.js?ver=38f123e83"></script>
 </body>
 </html>
