--- a/frontend/maps.html
+++ b/frontend/maps.html
@@ -192,9 +192,11 @@
       </dl>
     </ul>
     <h2 class="h2">Building</h2>
-    <pre id="building-detail">
-Click a building to see data.
-    </pre>
+    <pre id="building-detail">Click a building to see data.</pre>
+    <div class="buttons-container">
+      <a href="building-view.html" class="btn btn-primary">View building</a>
+      <a href="building-edit.html" class="btn btn-success">Edit data</a>
+    </div>
   </div>
 </main>
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
