--- a/frontend/404.html
+++ b/frontend/404.html
@@ -55,7 +55,18 @@
 <main class="beta">
 <article>
 <div class="main-col">
-    <h1 class="h2">Page not found</h1>
+    <h1 class="h2">Log in and sign up coming soon&hellip;</h1>
+    <p>
+        This is a public prototype (beta) site for the Colouring London project.
+    </p>
+    <p>
+        If you're interested to follow the project, you can
+        sign up for updates or read more about the project.
+    </p>
+    <div class="button-container">
+        <a href="about.html#sign-up" class="btn btn-outline-dark btn-half">Sign up for updates</a><!--
+        --><a href="about.html" class="btn btn-outline-dark btn-half">Read more about the project</a>
+    </div>
 </div>
 
 </article>
