Sketch in tooltip, section intro, tweak header.

--- a/frontend/building-view.html
+++ b/frontend/building-view.html
@@ -61,9 +61,27 @@
     <section class="data-section">
       <h3 class="h3 bullet-prefix location toggled-on"
           data-toggle="collapse"
-          data-target="#data-list-location">Location</h3>
+          data-target="#data-list-location">
+          Location
+      </h3>
+      <p class="data-intro">
+        Section introduction of up to roughly 100 characters will take approx&shy;imately this much space.
+        <a href="#">Read more</a>.
+      </p>
       <dl id="data-list-location" class="data-list collapse show">
-        <dt>Building Name</dt>
+        <dt>
+          Building Name
+
+          <span class="tooltip-hook" data-toggle="tooltip">
+            ?
+            <div class="tooltip bs-tooltip-bottom">
+              <div class="arrow"></div>
+              <div class="tooltip-inner">
+                Hint tooltip content should be ~40 chars.
+              </div>
+            </div>
+          </span>
+        </dt>
         <dd><span class="no-data">no data</span></dd>
         <dt>Building Number</dt>
         <dd><span class="no-data">no data</span></dd>
